[it] fix link for dream log. jQuery icon on mobile

--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -302,7 +302,7 @@
   .current {
     img {
       width: 28px;
-      margin-bottom: 0 auto 21px;
+      margin: 0 auto 21px;
     }
   }
   .future {
